Update application styles, wrap our Javascript functionality inside of a jQuery function wrapper to make sure we don't collide with anything else .. best practices ... you know.

--- a/app/css/global.less
+++ b/app/css/global.less
@@ -4,9 +4,6 @@
 -------------------------------------------------------------- */
 body {
 	background-color: #C5CCD3;
-	background-image: url("../img/pinstripes.png");
-	background-position: 0 0;
-	background-repeat: repeat;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin: 0;
 	overflow: hidden;
